fix: Replace all getTransactionsByBlock() mocks with getTransactionCountByBlock()
Problem: UnnecessaryStubbingException in BlockApiServiceTest
- Mockito strict mode detected 6 unnecessary stubbings
- Tests mocked getTransactionsByBlock() but implementation calls getTransactionCountByBlock()

Fix: Replace all 6 occurrences:
- Change mock method from getTransactionsByBlock() to getTransactionCountByBlock()
- Change return value from empty ArrayList to integer 0
- Affected tests:
  * getMainBlocksPageReturnsLatestBlocks
  * getBlocksByEpochReturnsAllBlocksInEpoch
  * getBlocksByEpochPageReturnsPaginatedBlocks
  * getBlocksByEpochPageReturnsEmptyWhenOffsetExceedsTotal
  * getBlocksByEpochRangeReturnsBlocksGroupedByEpoch
  * getBlocksByEpochRangeLimitsRangeSizeTo1000